# splay-top-trees

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  Top Trees.sln  Top Trees.vcxproj  Top Trees.vcxproj.filters  benchmark_mst.sh  build_benchmarks.sh  cmake_install.cmake  main  tests_include-b12d07c.cmake
bench/: msf_runner.cpp
benchmark/: benchmark_all.sh  benchmark_connectivity.cpp  benchmark_connectivity_random.sh  benchmark_mst.cpp  benchmark_mst_ogbl.sh  benchmark_mst_random.sh  gen_MSF_random.py
benchmark/data-generation/: gen_connec_data.py  gen_queries.rs
benchmark/plot_tools/: tabulate.py
benchmark/results/: mst_ogbl.jsonl
include/: MST.h  add_weight_cluster.hpp  connected.h  cover_level.h  edge.h  find_size.h  internal_node.hpp  leaf_node.hpp  max_weight_path_cluster.hpp  min_spanning_forest.h  node.hpp  top_tree.h  top_tree.hpp  top_tree_new.cpp  tree.hpp  two_edge_cluster.h  two_edge_connected.h  underlying_tree.h  underlying_tree.hpp  underlying_tree_new.h  underlying_tree_new.hpp  user_data.h
include/top_tree/: internal_node.hpp  leaf_node.hpp  node.hpp  top_tree.h  top_tree.hpp  tree.hpp  underlying_tree.h  underlying_tree.hpp
src/: connected.cpp  cover_level.cpp  find_first_label.cpp  find_size.cpp  main.cpp  two_edge_cluster.cpp  two_edge_connected.cpp
src/benchmark/: benchmark_2_edge.cpp  benchmark_connectivity.cpp  benchmark_mst.cpp
src/tree/: tree.cpp  underlying_tree.cpp
src/tree/top_tree/: internal_node.cpp  leaf_node.cpp  node.cpp  top_tree.cpp
src/user_data/: empty_data.cpp
test/: test.cpp  tree_test.cpp
test/2_edge_tests/: connected_test.cpp  cover_level_test.cpp  edge.h  find_first_label_test.cpp  find_size_test.cpp  two_edge_connected_test.cpp
test/min_span_forest_tests/: min_span_forest_test.cpp
test/toptree_tests/: add_common_weight_test.cpp  diameter_test.cpp  max_weight_in_component_test.cpp  max_weight_on_path_test.cpp  orientation_invariant_test.cpp  toptree_test.cpp  user_data_test.cpp
test/tree_tests/: toptree_test.cpp  tree_test.cpp  user_data_test.cpp
x64/Debug/Top Trees.tlog/: CL.command.1.tlog  Top Trees.lastbuildstate
